== Unreleased

  * Switched to RSpec, added skeletal specs for all types
  * Extensive refactoring, pulled chart types into GChart::Base subclasses
  * (bug) Errors in the static helpers should report a reasonable file and line

== 0.2.0 (2007-12-12)

  * Support for basic :labels
  * Support for pie3d
  * Minor doc cleanups

== 0.1.0 (2007-12-10)

  * Birthday!