@@ -1,5 +1,6 @@
 == Unreleased
-
+  
+  * Breaking change: labels --> legend
   * Switched to RSpec, added skeletal specs for all types
   * Extensive refactoring, pulled chart types into GChart::Base subclasses
   * (bug) Errors in the static helpers should report a reasonable file and line
